--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "do101",
-  "version": "1.0.0",
+  "version": "0.0.1-SNAPSHOT",
   "description": "",
   "main": "index.js",
   "scripts": {
